// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`httpEndpoint type diagnostics > address-dictionary-removed 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/address-dictionary-removed.ts(14,24): error TS2349: This expression is not callable.
  Type '{ get: HttpMethodConstructor; head: HttpMethodConstructor; post: HttpMethodConstructor; put: HttpMethodConstructor; patch: HttpMethodConstructor; delete: HttpMethodConstructor; implement: { ...; }; }' has no call signatures."
`;

exports[`httpEndpoint type diagnostics > class-undeclared-fail 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/class-undeclared-fail.ts(21,3): error TS2769: No overload matches this call.
  Overload 1 of 2, '(path: "/users", declaration: HttpEndpointDictionary<"/users", AnyPayload, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, ... 5 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'typeof CreateUserHandler' is not assignable to type 'CheckedHttpHandlerFn<AnyPayload, AnyInput, Fail<"conflict:email_taken", undefined>, AnyHttpResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>>'.
      Type 'typeof CreateUserHandler' provides no match for the signature '(payload: unknown, meta: HttpMetaOf<AnyInput>): AnyHttpResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>'.
  Overload 2 of 2, '(path: "/users", declaration: HttpEndpointDictionary<"/users", AnyPayload, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, ... 5 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'typeof CreateUserHandler' is not assignable to type 'typeof CreateUserHandler & { __error: "Handler returns a failure that is not declared in 'errors:'"; returned: "payment_required:card_declined"; declared: "conflict:email_taken"; hint: "add the definitions to 'errors:', or stop returning them from the handler"; }'.
      Type 'typeof CreateUserHandler' is missing the following properties from type '{ __error: "Handler returns a failure that is not declared in 'errors:'"; returned: "payment_required:card_declined"; declared: "conflict:email_taken"; hint: "add the definitions to 'errors:', or stop returning them from the handler"; }': __error, returned, declared, hint"
`;

exports[`httpEndpoint type diagnostics > class-wrong-input 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/class-wrong-input.ts(23,3): error TS2769: No overload matches this call.
  Overload 1 of 2, '(path: "/users/:id", declaration: HttpEndpointDictionary<"/users/:id", ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, ... 6 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'typeof GetUserHandler' is not assignable to type 'CheckedHttpHandlerFn<ZodObject<{ id: ZodString; }, $strip>, AnyInput, never, AnyHttpResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>>'.
      Type 'typeof GetUserHandler' provides no match for the signature '(payload: { id: string; }, meta: HttpMetaOf<AnyInput>): AnyHttpResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>'.
  Overload 2 of 2, '(path: "/users/:id", declaration: HttpEndpointDictionary<"/users/:id", ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, ... 6 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'typeof GetUserHandler' is not assignable to type 'HttpHandlerClass<ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>'.
      Construct signature return types 'GetUserHandler' and '{ handle: HttpHandlerFn<ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>; }' are incompatible.
        The types of 'handle' are incompatible between these types.
          Type '(payload: { id: number; }) => Promise<Ok<{ id: string; email: string; }, "ok">>' is not assignable to type 'HttpHandlerFn<ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>'.
            Types of parameters 'payload' and 'payload' are incompatible.
              Type '{ id: string; }' is not assignable to type '{ id: number; }'.
                Types of property 'id' are incompatible.
                  Type 'string' is not assignable to type 'number'."
`;

exports[`httpEndpoint type diagnostics > class-wrong-output 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/class-wrong-output.ts(22,3): error TS2769: No overload matches this call.
  Overload 1 of 2, '(path: "/users/:id", declaration: HttpEndpointDictionary<"/users/:id", ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, ... 6 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'typeof GetUserHandler' is not assignable to type 'CheckedHttpHandlerFn<ZodObject<{ id: ZodString; }, $strip>, AnyInput, never, AnyHttpResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>>'.
      Type 'typeof GetUserHandler' provides no match for the signature '(payload: { id: string; }, meta: HttpMetaOf<AnyInput>): AnyHttpResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>'.
  Overload 2 of 2, '(path: "/users/:id", declaration: HttpEndpointDictionary<"/users/:id", ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, ... 6 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'typeof GetUserHandler' is not assignable to type 'HttpHandlerClass<ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>'.
      Construct signature return types 'GetUserHandler' and '{ handle: HttpHandlerFn<ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>; }' are incompatible.
        The types returned by 'handle(...)' are incompatible between these types.
          Type 'Promise<Ok<{ unexpected: boolean; }, "ok">>' is not assignable to type 'HttpDeclaredResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyFail, never> | Promise<HttpDeclaredResult<ZodObject<...>, AnyFail, never>>'.
            Type 'Promise<Ok<{ unexpected: boolean; }, "ok">>' is not assignable to type 'Promise<HttpDeclaredResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyFail, never>>'.
              Type 'Ok<{ unexpected: boolean; }, "ok">' is not assignable to type 'HttpDeclaredResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyFail, never>'.
                Type 'Ok<{ unexpected: boolean; }, "ok">' is not assignable to type 'Ok<{ id: string; email: string; }, "ok">'.
                  Type '{ unexpected: boolean; }' is missing the following properties from type '{ id: string; email: string; }': id, email"
`;

exports[`httpEndpoint type diagnostics > function-undeclared-fail 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/function-undeclared-fail.ts(12,40): error TS2769: No overload matches this call.
  Overload 1 of 2, '(path: "/users", declaration: HttpEndpointDictionary<"/users", AnyPayload, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, ... 5 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'Promise<Fail<"payment_required:card_declined", undefined>>' is not assignable to type 'Promise<Fail<"payment_required:card_declined", undefined>> & { __error: "Handler returns a failure that is not declared in 'errors:'"; returned: "payment_required:card_declined"; declared: "conflict:email_taken"; hint: "add the definitions to 'errors:', or stop returning them from the handler"; }'.
      Type 'Promise<Fail<"payment_required:card_declined", undefined>>' is missing the following properties from type '{ __error: "Handler returns a failure that is not declared in 'errors:'"; returned: "payment_required:card_declined"; declared: "conflict:email_taken"; hint: "add the definitions to 'errors:', or stop returning them from the handler"; }': __error, returned, declared, hint
  Overload 2 of 2, '(path: "/users", declaration: HttpEndpointDictionary<"/users", AnyPayload, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, ... 5 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type '() => Promise<Fail<"payment_required:card_declined", undefined>>' is not assignable to type 'HttpHandlerClass<AnyPayload, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>'.
      Type '() => Promise<Fail<"payment_required:card_declined", undefined>>' provides no match for the signature 'new (...args: any[]): { handle: HttpHandlerFn<AnyPayload, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>; }'."
`;

exports[`httpEndpoint type diagnostics > function-wrong-output 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/function-wrong-output.ts(13,37): error TS2769: No overload matches this call.
  Overload 1 of 2, '(path: "/users/:id", declaration: HttpEndpointDictionary<"/users/:id", ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, ... 6 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'Promise<Ok<{ unexpected: boolean; }, "ok">>' is not assignable to type 'AnyHttpResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>'.
      Type 'Promise<Ok<{ unexpected: boolean; }, "ok">>' is not assignable to type 'Promise<HttpDeclaredResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyFail, never>>'.
        Type 'Ok<{ unexpected: boolean; }, "ok">' is not assignable to type 'HttpDeclaredResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyFail, never>'.
          Type 'Ok<{ unexpected: boolean; }, "ok">' is not assignable to type 'Ok<{ id: string; email: string; }, "ok">'.
            Type '{ unexpected: boolean; }' is missing the following properties from type '{ id: string; email: string; }': id, email
  Overload 2 of 2, '(path: "/users/:id", declaration: HttpEndpointDictionary<"/users/:id", ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, ... 6 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type '() => Promise<Ok<{ unexpected: boolean; }, "ok">>' is not assignable to type 'HttpHandlerClass<ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>'.
      Type '() => Promise<Ok<{ unexpected: boolean; }, "ok">>' provides no match for the signature 'new (...args: any[]): { handle: HttpHandlerFn<ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>; }'."
`;

exports[`httpEndpoint type diagnostics > implement-class-undeclared-fail 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/implement-class-undeclared-fail.ts(23,3): error TS2769: No overload matches this call.
  Overload 1 of 2, '(operation: RequestOperation<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, FailDefinitionWithoutDetails<...>[], never>, declaration: HttpImplementDictionary<...> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'typeof CreateUserHandler' is not assignable to type 'CheckedHandlerFn<ZodObject<{ email: ZodString; }, $strip>, AnyInput, Fail<"conflict:email_taken", undefined>, AnyHandlerResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>>'.
      Type 'typeof CreateUserHandler' provides no match for the signature '(payload: { email: string; }, meta: HandlerMetaOf<AnyInput>): AnyHandlerResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>'.
  Overload 2 of 2, '(operation: RequestOperation<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, FailDefinitionWithoutDetails<...>[], never>, declaration: HttpImplementDictionary<...> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'typeof CreateUserHandler' is not assignable to type 'typeof CreateUserHandler & { __error: "Handler returns a failure that is not declared in 'errors:'"; returned: "payment_required:card_declined"; declared: "conflict:email_taken"; hint: "add the definitions to 'errors:', or stop returning them from the handler"; }'.
      Type 'typeof CreateUserHandler' is missing the following properties from type '{ __error: "Handler returns a failure that is not declared in 'errors:'"; returned: "payment_required:card_declined"; declared: "conflict:email_taken"; hint: "add the definitions to 'errors:', or stop returning them from the handler"; }': __error, returned, declared, hint"
`;

exports[`httpEndpoint type diagnostics > implement-function-undeclared-fail 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/implement-function-undeclared-fail.ts(17,40): error TS2769: No overload matches this call.
  Overload 1 of 2, '(operation: RequestOperation<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, FailDefinitionWithoutDetails<...>[], never>, declaration: HttpImplementDictionary<...> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'Promise<Fail<"payment_required:card_declined", undefined>>' is not assignable to type 'Promise<Fail<"payment_required:card_declined", undefined>> & { __error: "Handler returns a failure that is not declared in 'errors:'"; returned: "payment_required:card_declined"; declared: "conflict:email_taken"; hint: "add the definitions to 'errors:', or stop returning them from the handler"; }'.
      Type 'Promise<Fail<"payment_required:card_declined", undefined>>' is missing the following properties from type '{ __error: "Handler returns a failure that is not declared in 'errors:'"; returned: "payment_required:card_declined"; declared: "conflict:email_taken"; hint: "add the definitions to 'errors:', or stop returning them from the handler"; }': __error, returned, declared, hint
  Overload 2 of 2, '(operation: RequestOperation<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, FailDefinitionWithoutDetails<...>[], never>, declaration: HttpImplementDictionary<...> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type '() => Promise<Fail<"payment_required:card_declined", undefined>>' is not assignable to type 'HandlerClass<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>'.
      Type '() => Promise<Fail<"payment_required:card_declined", undefined>>' provides no match for the signature 'new (...args: any[]): { handle: HandlerFn<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>; }'."
`;

exports[`httpEndpoint type diagnostics > object-form-removed 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/object-form-removed.ts(23,5): error TS2769: No overload matches this call.
  Overload 1 of 2, '(path: "/users/:id", declaration: HttpEndpointDictionary<"/users/:id", ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, ... 6 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Object literal may only specify known properties, and 'deps' does not exist in type 'CheckedHttpHandlerFn<ZodObject<{ id: ZodString; }, $strip>, AnyInput, never, AnyHttpResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>>'.
  Overload 2 of 2, '(path: "/users/:id", declaration: HttpEndpointDictionary<"/users/:id", ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, ... 6 more ..., never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Object literal may only specify known properties, and 'deps' does not exist in type 'HttpHandlerClass<ZodObject<{ id: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, AnyInput, AnyFail, never>'."
`;

exports[`httpEndpoint type diagnostics > operation-key-removed 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/operation-key-removed.ts(14,40): error TS2769: No overload matches this call.
  Overload 1 of 2, '(path: "/users", declaration: HttpEndpointDictionary<"/users", AnyPayload, undefined, AnyInput, never, undefined, EmptyInput, [], never, never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'Promise<Ok<{ id: string; email: string; }, "ok">>' is not assignable to type 'AnyHttpResult<undefined, never>'.
      Type 'Promise<Ok<{ id: string; email: string; }, "ok">>' is not assignable to type 'Promise<HttpDeclaredResult<undefined, AnyFail, never>>'.
        Type 'Ok<{ id: string; email: string; }, "ok">' is not assignable to type 'HttpDeclaredResult<undefined, AnyFail, never>'.
          Type 'Ok<{ id: string; email: string; }, "ok">' is not assignable to type 'Ok<null, "no_content"> | Ok<void, "no_content">'.
            Type 'Ok<{ id: string; email: string; }, "ok">' is not assignable to type 'Ok<null, "no_content">'.
              Type '{ id: string; email: string; }' is not assignable to type 'null'.
  Overload 2 of 2, '(path: "/users", declaration: HttpEndpointDictionary<"/users", AnyPayload, undefined, AnyInput, never, undefined, EmptyInput, [], never, never> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type '() => Promise<Ok<{ id: string; email: string; }, "ok">>' is not assignable to type 'HttpHandlerClass<AnyPayload, undefined, AnyInput, AnyFail, never>'.
      Type '() => Promise<Ok<{ id: string; email: string; }, "ok">>' provides no match for the signature 'new (...args: any[]): { handle: HttpHandlerFn<AnyPayload, undefined, AnyInput, AnyFail, never>; }'."
`;

exports[`httpEndpoint type diagnostics > operation-layer-fail-undeclared 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/operation-layer-fail-undeclared.ts(28,3): error TS2769: No overload matches this call.
  Overload 2 of 2, '(operation: RequestOperation<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, FailDefinitionWithoutDetails<...>[], never>, declaration: HttpImplementDictionary<...> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'PipelineBuilder<EmptyInput, EmptyInput, never, Fail<"unauthorized", undefined>>' is not assignable to type 'Pipeline<AnyInput, EmptyInput, never, Fail<"unauthorized", undefined>> & { __error: "Layer may fail with errors the operation does not declare"; undeclared: Fail<...>; hint: "add the definitions to 'errors:' of the operation"; }'.
      Type 'PipelineBuilder<EmptyInput, EmptyInput, never, Fail<"unauthorized", undefined>>' is missing the following properties from type '{ __error: "Layer may fail with errors the operation does not declare"; undeclared: Fail<"unauthorized", undefined>; hint: "add the definitions to 'errors:' of the operation"; }': __error, undeclared, hint"
`;

exports[`httpEndpoint type diagnostics > operation-redeclared-input 1`] = `
"packages/nestling.transport.http/type-tests/fixtures/operation-redeclared-input.ts(22,40): error TS2769: No overload matches this call.
  Overload 1 of 2, '(operation: RequestOperation<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, FailDefinitionWithoutDetails<...>[], never>, declaration: HttpImplementDictionary<...> & { ...; }): EndpointDefinition<...>', gave the following error.
    Type 'typeof CreateUserHandler' is not assignable to type 'CheckedHandlerFn<ZodObject<{ email: ZodString; }, $strip>, AnyInput, Fail<"conflict:email_taken", undefined>, AnyHandlerResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>>'.
      Type 'typeof CreateUserHandler' provides no match for the signature '(payload: { email: string; }, meta: HandlerMetaOf<AnyInput>): AnyHandlerResult<ZodObject<{ id: ZodString; email: ZodString; }, $strip>, never>'.
  Overload 2 of 2, '(operation: RequestOperation<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, FailDefinitionWithoutDetails<...>[], never>, declaration: HttpImplementDictionary<...> & { ...; }): EndpointDefinition<...>', gave the following error.
    Object literal may only specify known properties, and 'input' does not exist in type 'HttpImplementDictionary<RequestOperation<ZodObject<{ email: ZodString; }, $strip>, ZodObject<{ id: ZodString; email: ZodString; }, $strip>, FailDefinitionWithoutDetails<...>[], never>, AnyInput, never, never> & { ...; }'."
`;
